# Password-Keeper

./: .gitignore  CMakeLists.txt  README.md  env.bat  env.sh  launcher.command  main.cpp  tastatura.txt
.github/actions/install-postgres/: action.yml
.github/actions/process-artifacts/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
Database/: Auth.cpp  Auth.h  Database.cpp  Database.h
EnvironmentReader/: EnvironmentReader.cpp  EnvironmentReader.h
Logger/: Logger.cpp  Logger.h
User/: User.cpp  User.h
Utils/: EnvVarManager.cpp  PasswordHash.cpp  PasswordHash.h
cmake/: CompilerFlags.cmake  CopyHelper.cmake  Options.cmake
infrastructure/: Dockerfile  compose.yaml
infrastructure/SQL_Scripts/: 1_users.sql  2_bankaccounts.sql  3_emailaccounts.sql  4_socialmediaaccounts.sql  users.sql
scripts/: cmake.sh  run_cppcheck.sh
src/: CMakeLists.txt  launcher.command  main.cpp
src/Accounts/: Account.cpp  Account.h  AccountFactory.cpp  AccountFactory.h  BankAccount.cpp  BankAccount.h  EmailAccount.cpp  EmailAccount.h  SocialMediaAccount.cpp  SocialMediaAccount.h
src/Database/: Auth.cpp  Auth.h  Database.cpp  Database.h  DatabasePool.cpp  DatabasePool.h
src/EnvironmentReader/: EnvironmentReader.cpp  EnvironmentReader.h
src/Exceptions/AccountExceptions/: AccountExceptions.cpp  AccountExceptions.h
src/Exceptions/DatabaseExceptions/: AccountExceptions.cpp  AccountExceptions.h  DatabaseExceptions.cpp  DatabaseExceptions.h
src/Logger/: Logger.cpp  Logger.h
src/User/: User.cpp  User.h
src/Utils/: AccountType.cpp  AccountType.h  AddAccountCommandTemplate.cpp  AddAccountCommandTemplate.h  EnvVarManager.cpp  EnvVarManager.h  PasswordHash.cpp  PasswordHash.h  ShowAccountsCommand.cpp  ShowAccountsCommand.h  VectorPlusTemplate.cpp  VectorUtils.h
src/cmake/: CustomStdlibAndSanitizers.cmake
tests/: AccountFactoryTest.cpp  AccountTestInsertShowLoggedIn.cpp  AccountTestNotLoggedIn.cpp  CMakeLists.txt  HashingTest.cpp  UserTest.cpp  VectorPlusTest.cpp  launcher.command  main.cpp
tests/cmake/: CompilerFlags.cmake  Options.cmake
